<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/redCircle"
        android:layout_width="161dp"

        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/ic_brightness_1_black_24dp" />

    <TextView
        android:id="@+id/BP"
        android:layout_width="59dp"
        android:layout_height="54dp"
        android:layout_marginBottom="52dp"
        android:text="@string/bp"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/redCircle"
        app:layout_constraintEnd_toEndOf="@+id/redCircle"
        app:layout_constraintStart_toStartOf="@+id/redCircle" />

    <TextView
        android:id="@+id/description"
        android:layout_width="186dp"
        android:layout_height="73dp"
        android:gravity="center"
        android:text="@string/healthSystem"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redCircle" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="260dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <EditText
        android:id="@+id/ageField"
        android:layout_width="260dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ageHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#3c4858"
        android:text="@string/save"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageField" />

    <Button
        android:id="@+id/pressureButton"
        android:layout_width="261dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3c4858"
        android:text="@string/pressureButton"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <Button
        android:id="@+id/liveButton"
        android:layout_width="261dp"
        android:layout_height="46dp"
        android:backgroundTint="#3c4858"
        android:text="@string/healthIndex"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureButton"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>