<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureActivity">

    <EditText
        android:id="@+id/topPressure"
        android:layout_width="261dp"
        android:layout_height="47dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/topPressureHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lowPressure"
        android:layout_width="261dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/lowPressureHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPressure" />

    <EditText
        android:id="@+id/Puls"
        android:layout_width="261dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/PulsHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowPressure" />

    <CheckBox
        android:id="@+id/checkTachycardia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tachycardia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Puls" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTachycardia" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="261dp"
        android:layout_height="65dp"
        android:backgroundTint="#3c4858"
        android:text="@string/save"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText"
        app:layout_constraintVertical_bias="0.228" />
</androidx.constraintlayout.widget.ConstraintLayout>