<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureActivity">


    <EditText
        android:id="@+id/weight"
        android:layout_width="261dp"
        android:layout_height="45dp"
        android:layout_marginTop="216dp"
        android:ems="10"
        android:hint="@string/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/steps"
        android:layout_width="261dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/stepNumber"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="261dp"
        android:layout_height="65dp"
        android:backgroundTint="#3c4858"
        android:text="@string/save"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps"
        app:layout_constraintVertical_bias="0.458" />
</androidx.constraintlayout.widget.ConstraintLayout>